# Neural_Pre_Processing

./: Mytrain_UNet_reg_tv_hypernetwork_multi_datasets.py  docker_compile_readme.md  npp.py  npp_docker  pyproject.toml  readme.md  requirements.txt  train.py
dataset/: mri_dataset_affine.py  pretrain_files_list.pkl
docker/: Dockerfile
models/: UNET_tv_lightning_affine_hypernet.py  losses.py  model.py  utils.py
npp/: __init__.py  npp_inference.py
npp/dataset/: mri_dataset_affine.py
npp/models/: model.py
npp/train/: train.py
nppy/inference/: nppy_fastsurfer_segmentation2mni.py  nppy_inference.py
nppy/models/: model.py  utils.py
nppy/train/: train.py
