[project]
name = "npp"
version = "0.1.0"
requires-python = ">=3.8"
description = "Neural Pre-Processing: A Learning Framework for End-to-end Brain MRI Pre-processing."
readme = "readme.md"
license = { file = "LICENSE" }
authors = [
    { name = "Xinzi He", email = "xh278@cornell.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = [
    'deep learning',
    'brain MRI',
    'MRI preprocessing',
    'neural pre-processing',
    'npp'
]

dependencies = [
    "aiohttp==3.8.6",
    "aiosignal==1.3.1",
    "async-timeout==4.0.3",
    "attrs==23.1.0",
    "certifi==2023.7.22",
    "charset-normalizer==3.3.1",
    "click==8.1.7",
    "colorama==0.4.6",
    "Deprecated==1.2.14",
    "einops==0.7.0",
    "filelock==3.12.4",
    "frozenlist==1.4.0",
    "fsspec==2023.10.0",
    "huggingface-hub==0.18.0",
    "humanize==4.8.0",
    "idna==3.4",
    "importlib-resources==6.1.0",
    "Jinja2==3.1.2",
    "lightning-utilities==0.9.0",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.0.4",
    "networkx==3.1",
    "nibabel==5.1.0",
    "numpy==1.24.4",
    "packaging==23.2",
    "Pillow==10.1.0",
    "pydicom==2.4.3",
    "Pygments==2.16.1",
    "pytorch-lightning==2.1.0",
    "PyYAML==6.0.1",
    "requests==2.31.0",
    "rich==13.6.0",
    "scipy==1.10.1",
    "shellingham==1.5.4",
    "SimpleITK==2.3.0",
    "surfa==0.6.0",
    "sympy==1.12",
    "torch==2.1.0",
    "torchio==0.19.1",
    "torchmetrics==1.2.0",
    "tqdm==4.66.1",
    "typer==0.9.0",
    "typing_extensions==4.8.0",
    "urllib3==2.0.7",
    "wrapt==1.15.0",
    "xxhash==3.4.1",
    "yarl==1.9.2",
    "zipp==3.17.0"
]

[project.urls]
homepage = "https://github.com/Novestars"
repository = "https://github.com/Novestars/Neural_Pre_Processing"

[project.scripts]
# You can add your script entry points here, e.g.
npp = "npp.npp_inference:main"

[tool.codespell]
skip = '.git,*.pdf,*.svg'
# ignore-words-list = ''
[tool.setuptools]
py-modules = ['npp']
